# vulkan_discovery_repo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  entry_point.cpp  entry_point_opengl.cpp  glh_cpp_opengl.cpp
res/shaders/: basic_shader.glsl
shaders/: vertex_f.frag  vertex_v.vert
src/: basic_command_buffer.cpp  basic_command_buffer.h  basic_pipeline.cpp  basic_pipeline.h  entry_point.cpp  mesh.cpp  mesh.h  platform.cpp  platform.h  shader.cpp  shader.h  transform.cpp  transform.h  transform_methods.inl  vulkan_base.cpp  vulkan_base.h  vulkan_graphics_pipeline.cpp  vulkan_graphics_pipeline.h
src/model/: gltf_model.cpp  gltf_model.h  gltf_reader.cpp  gltf_reader.h  model_3d.cpp  model_3d.h
src/vulkan/: dense_id_list.hpp  vk_mem_alloc.h  vulkan_base.cpp  vulkan_base.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_graphics.h  vulkan_graphics_pipeline.cpp  vulkan_graphics_pipeline.h  vulkan_image.cpp  vulkan_image.h  vulkan_uniform_buffer.cpp  vulkan_uniform_buffer.h
